monitoring/ai-ops/_archive/holmesgpt/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: holmes
  namespace: holmesgpt
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal-technitium
      namespace: gateway
  hostnames:
    - holmes.vanillax.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: holmes-holmes
          port: 80
          weight: 1
